Set z-index to fix duplicate start menu issue

--- a/client/layout.scss
+++ b/client/layout.scss
@@ -1,3 +1,9 @@
+app-root {
+    z-index: 1;
+    position: relative;
+}
+
+
 .taskbar-left,
 .taskbar-right {
     .dots {
